fix do not disturb indicator icon which is not visible when the clock panel button in active state

--- a/Bubble-Light-Blue/gnome-shell/gnome-shell.css
+++ b/Bubble-Light-Blue/gnome-shell/gnome-shell.css
@@ -775,6 +775,9 @@ StScrollBar {
       box-shadow: none;
       border: none;
       border-color: transparent; }
+  #panel .panel-button.clock-display:active > * > *:last-child, #panel .panel-button.clock-display:checked > * > *:last-child {
+    color: #F7F8F8;
+    background-color: #557FAF; }
   #panel #panelActivities.panel-button {
     -natural-hpadding: 12px; }
   #panel .panel-status-indicators-box,
@@ -785,7 +788,7 @@ StScrollBar {
   #panel .screencast-indicator {
     color: #FC4138; }
   #panel .clock-display > * > *:last-child {
-    color: #557FAF;
+    color: #668cb7;
     margin-left: .3em; }
   #panel .popup-menu-arrow {
     width: 0; }
